include_directories(.. ../mpackCPP)

if(YOTTA_CFG_MBED)
    add_executable(subscribe example.cpp)
    target_link_libraries(subscribe mpackcpp wamp mbed-drivers sockets)
    yotta_postprocess_target(EXECUTABLE subscribe)
else(YOTTA_CFG_MBED)
add_executable(msgpack_test mpacktest.cpp)
add_executable(transport_test WSTransportTest.cpp)
add_executable(register_test registerProcedureTest.cpp)
target_link_libraries(msgpack_test mpackcpp)
target_link_libraries(register_test mpackcpp)
target_link_libraries(transport_test wamp)
endif(YOTTA_CFG_MBED)