include_directories(..)
if(YOTTA_CFG_MBED)
    add_executable(subscribe example.cpp)
    target_link_libraries(subscribe wamped mbed-drivers sockets)
    yotta_postprocess_target(EXECUTABLE subscribe)

    add_executable(wampDemo WampMBEDMain.cpp Accelerometer/FXOS8700Q.cpp)
    target_link_libraries(wampDemo wamped mbed-drivers sockets)
    yotta_postprocess_target(EXECUTABLE wampDemo)
else(YOTTA_CFG_MBED)
add_executable(msgpack_test mpacktest.cpp)
add_executable(transport_test WSTransportTest.cpp)
add_executable(register_test registerProcedureTest.cpp)
add_executable(wampDemo AppDesktop.cpp)

target_link_libraries(msgpack_test mpackcpp)
target_link_libraries(register_test mpackcpp)
target_link_libraries(transport_test wamped)
target_link_libraries(wampDemo wamped)

endif(YOTTA_CFG_MBED)